# aoc2022

./: Cargo.toml
src/: main01a.rs  main01b.rs  main02a.rs  main02b.rs  main03a.rs  main03b.rs  main04a.rs  main04b.rs  main05a.rs  main05b.rs  main06.rs  main07.rs  main08.rs  main09.rs  main10.rs  main11.rs  main12.rs  main13.rs  main14.rs  main15.rs  main16.rs
