[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
nom = "*"

[[bin]]
name = "main01a"
path = "src/main01a.rs"

[[bin]]
name = "main01b"
path = "src/main01b.rs"

[[bin]]
name = "main02a"
path = "src/main02a.rs"

[[bin]]
name = "main02b"
path = "src/main02b.rs"

[[bin]]
name = "main03a"
path = "src/main03a.rs"

[[bin]]
name = "main03b"
path = "src/main03b.rs"

[[bin]]
name = "main04a"
path = "src/main04a.rs"

[[bin]]
name = "main04b"
path = "src/main04b.rs"

[[bin]]
name = "main05a"
path = "src/main05a.rs"

[[bin]]
name = "main05b"
path = "src/main05b.rs"

[[bin]]
name = "main06"
path = "src/main06.rs"

[[bin]]
name = "main07"
path = "src/main07.rs"

[[bin]]
name = "main08"
path = "src/main08.rs"

[[bin]]
name = "main09"
path = "src/main09.rs"